--- a/assets/src/css/core.css
+++ b/assets/src/css/core.css
@@ -109,7 +109,7 @@ html, body {
     grid-gap: 1.5em;
 }
 
-.alignfull {
+/* .alignfull {
     margin-left: calc(50% - 50vw);
     margin-right: calc(50% - 50vw);
     max-width: 100vw;
@@ -117,7 +117,7 @@ html, body {
     overflow: hidden;
 }
 
-/* .alignwide {
+.alignwide {
     max-width: 90vw;
     margin-left: calc(50% - 39vw);
     margin-right: calc(50% - 39vw);
